[gd_scene load_steps=10 format=2]

[ext_resource path="res://pickable.tscn" type="PackedScene" id=1]
[ext_resource path="res://art/objects/chest_open.png" type="Texture" id=2]
[ext_resource path="res://art/objects/chest_closed.png" type="Texture" id=3]
[ext_resource path="res://chest.gd" type="Script" id=4]
[ext_resource path="res://audio/sfx/chest_open.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/sfx/chest_close.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.13702, 7.08955 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "closed",
"speed": 0.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "opened",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.44848, 8.37784 )

[node name="Chest" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="AnimatedSprite" parent="." index="1"]
frames = SubResource( 2 )
animation = "closed"
playing = true

[node name="Area2D" parent="." index="2"]
scale = Vector2( 1.13053, 1.14568 )

[node name="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 3 )

[node name="Open" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource( 5 )

[node name="Close" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource( 6 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
